# mpl-bubblegum-elixir-nifs

./: .gitignore  Cargo.toml  LICENSE  README.md  mix.exs
lib/: connection.ex  mpl_bubblegum_nifs.ex
native/mplbubblegumnifs/: Cargo.toml  README.md
native/mplbubblegumnifs/src/: lib.rs
test/: mpl_bubblegum_nifs_test.exs
