[package]
name = "mplbubblegumnifs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "mplbubblegumnifs"
crate-type = ["cdylib"]

[dependencies]
solana-sdk = { version = "2.2.1" }
mpl-bubblegum = "1.4.0"
rustler = "0.36.1"
solana-program = "2.2.1"
solana-pubkey = "2.2.1"
# solana-sdk = "2.2.1"
