[package]
name = "mplbubblegumnifs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "mplbubblegumnifs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.1"
solana-program = "1.16.15"
solana-sdk = "2.2.1"
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.4.2", features = ["no-entrypoint"] }
solana-client = "1.17.0"
base64 = "0.22.1"
bincode = "1.3.3"
spl-merkle-tree-reference = "0.1.1"
solana-instruction = "2.2.1"
